assets/style/style.css
body{
    /* display: flex; */
    flex-direction: column;
    /* background: linear-gradient(
        to left,
        black 50%,
        red 50% */
    /* ); */
    background-color: #1f1d1d;
}

#logo-container {
    display: flex;
    align-items: center;
    justify-content: center;
}


.welcome {
    /* background-color:rgba(54, 6, 8, .9); */
    background-color: black;
    border: 3px white;
    color:white;
    border-style: outset;
    border-radius: 12px;
    margin: 10px;
}

#welcome-title {
    text-align: center;
}

p {
    margin:15px;
    font-size: 13.5pt;
}
    /* background-color: #555555; */

iframe {
    background-color: #242322;
    display: none;
}

#searchMovieBTN {
    top:-9px;
}

#movieInfo {
    display: none;
    margin-bottom: 30px;
    background-color: rgba(54, 6, 8, .9);
}

#movieInfo img {
    margin: 40px 20px 40px 40px;
}

#movieInfo section {
    margin: 40px 20px;
    width: 60%;
    padding: 10px;
    color:white;
}

#movieInfo section h2 {
    margin: 0 0 1.42rem 0;
}

#logo {
    max-height: 4rem;
}

#c1-header {
    color: white;
    font-size: 25pt;
    text-align: center;
}

#c2-header {
    color: white;
    font-size: 25pt;
    text-align: center;
}

#c3-header {
    color: white;
    font-size: 25pt;
    text-align: center;
}

.sandwich-meat {
    align-content: space-between;
    justify-content: space-between;
}

.carousel {
    align-items: center;
    justify-content: center;
    display: block;
    margin:10px; 
    max-width: auto;
    min-width: auto;
    background-color: black;
    border-color: white;
    border:5px white;
    border-style:outset;
    border-radius: 12px; 
}

.carousel-item {
    display: block;
}

#view-showtimes {
    display: none;
   justify-content: space-between;
   justify-items:end;
   align-items: end;
   align-content:space-between;
   height: 40px;
   width: auto;
   position: absolute;

}

button a {
    display: none;
    color: black;
    align-items: center;
    border-radius: 12px;
    
}

#searchMovieBTN {
    top: -9px;
}

#searchMovieBTN {
    background-color: #555555;
    border-radius: 12px;
}
 #logo-container{
    font-family: Copperplate, Papyrus, fantasy;
    text-shadow: 2px 2px 5px white;
    font-size: 45px;
 }

 nav {
    height: 100%;
    padding: 0px;
    background-color:rgba(54, 6, 8, .9);
 }

 .nav-wrapper{
    display:flex;
    justify-content: space-between;
    align-items: center;
 }

 header {
    height: 100px;
 }
/* 
header nav { 
    padding-top: 15px;
    margin-right: 20px;
    float: right;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 20px;
}
 */

